[tool.poetry]
name = "treasure-box"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
django-environ = "^0.8.1"
dj-rest-auth = "^2.2.4"
PyMySQL = "^1.0.2"
mysqlclient = "^2.1.0"
django-allauth = "^0.50.0"
isort = "^5.10.1"
django-cors-headers = "^3.11.0"
gunicorn = "^20.1.0"
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
