[tool.poetry]
name = "treasure-box"
version = "0.1.0"
description = ""
authors = ["martinalee94 <martinalee0528@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flask-restx = "^0.5.1"
mysqlclient = "^2.1.1"
PyMySQL = "^1.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
